testando novas cores

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@ title: Home
 
 <div class="pagination">
   {% if paginator.next_page %}
-    <a class="pagination-item older" href="/page{{paginator.next_page}}">Antigos</a>
+    <a class="pagination-item older" href="/page{{paginator.next_page}}"> Posts Antigos</a>
   {% else %}
-    <span class="pagination-item older">Antigos</span>
+    <span class="pagination-item older"> Posts Antigos</span>
   {% endif %}
   {% if paginator.previous_page %}
     {% if paginator.page == 2 %}
